# enhanced-virtual-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
eva/: assistant.py  audio.py  prompts.py  tts.py
eva/tools/: filesystem.py  weather.py  wikipedia.py
jarvis/: agent.py
jarvis/tools/: filesystem.py  wikipedia.py
prompts/: reviewer_prompt.txt  system_prompt.txt
